Day 43 Update README

--- a/Todoey/AngelaYuTodoey/Views/Base.lproj/Main.storyboard
+++ b/Todoey/AngelaYuTodoey/Views/Base.lproj/Main.storyboard
@@ -32,7 +32,6 @@
                     </tableView>
                     <navigationItem key="navigationItem" title="Todoey" id="FNr-FR-UUr">
                         <barButtonItem key="rightBarButtonItem" systemItem="add" id="Myi-9d-FGd">
-                            <color key="tintColor" systemColor="labelColor"/>
                             <connections>
                                 <action selector="addButtonPressed:" destination="7Sr-X2-Q7C" id="2al-5P-yB9"/>
                             </connections>
@@ -101,7 +100,9 @@
                         <rect key="frame" x="0.0" y="59" width="393" height="96"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <navigationBarAppearance key="standardAppearance"/>
+                        <navigationBarAppearance key="compactAppearance"/>
                         <navigationBarAppearance key="scrollEdgeAppearance"/>
+                        <navigationBarAppearance key="compactScrollEdgeAppearance"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
@@ -114,9 +115,6 @@
         </scene>
     </scenes>
     <resources>
-        <systemColor name="labelColor">
-            <color white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
